<resources>
    <string name="app_name">Refrigerator</string>
    <string name="add">Add</string>
    <string name="name">NAME</string>
    <string name="category">CATEGORY</string>
    <string name="_22_10_2019">22.10.2019</string>
    <string name="delete">Delete</string>
    <string name="expiration_date">Expiration date (DD.MM.YYYY)</string>
    <string name="expiration_date_2">Expiration date</string>
    <string name="x25">x25</string>
    <string name="todo">TODO</string>
    <string name="category_image">Category Image</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="quantity">Quantity</string>
    <string name="description">Application created for the needs of recruitment by Radosław Czubak. Icons made by Freepik, Prosymbols from www.flaticon.com.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="login_image">Login Image</string>
    <string name="imageview3_descript">register icon</string>
    <string name="Name">Name</string>
    <string name="fridge_icon">Fridge Icon</string>
    <string name="empty_text">Your refrigerator is empty! Add some new products :)</string>
    <string name="shopping_text">Shopping maybe? Make checklist!</string>
    <string name="vegs_descript">Vegs animation</string>
    <string name="add_txt">Add</string>
    <string name="wrong_date_format_toast">Date format must be like DD.MM.YYYY</string>
    <string name="product_added">Product already added!</string>
    <string name="product_failed">Product adding failed!</string>
    <string name="date_nan">Date is not a number!</string>
    <string name="wrong_date">Wrong date!</string>
    <string name="reg_success">Registration successful!</string>
    <string name="password_req">Password must be 8 characters long and contains one capital letter</string>
    <string name="password_diff">Passwords are different!</string>
    <string name="product_name_empty">Product name cannot be empty!</string>
    <string name="product_quantity_empty">You cannot own 0 pieces of product!</string>
    <string name="product_date_empty">Check date format [DD.MM.YYYY]!</string>
    <string name="register_network_fail">Internet connection problem.</string>

    <string-array name="food_array">
        <item>Dairy</item>
        <item>Bread</item>
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Sweeties</item>
    </string-array>
    <string-array name="units">
        <item>kg(s)</item>
        <item> - </item>
        <item>pckg(s)</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
