<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="5dp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="166dp"
            android:layout_height="135dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/category_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/categoryTxt"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/underTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.291" />

        <TextView
            android:id="@+id/expirationDateTxt"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/_22_10_2019"
            android:textAlignment="center"
            android:textColor="#06B802"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/underTxt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantityTxt"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="@string/x25"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTxt" />

        <Button
            android:id="@+id/deleteBtn"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/delete"
            android:textColor="#FDFDFD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/quantityTxt" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>